Finished with about me and fixes to spacing

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -42,17 +42,13 @@ header {
 
 /* Image ====================================== */
 .me {
-  background: linear-gradient(
-    transparent,
-    var(--colour-primary-header-image),
-    transparent
-  );
+  background: linear-gradient(var(--colour-primary-header-image), transparent);
   width: 22rem;
   height: 30rem;
   position: absolute;
   left: calc(50% - 11rem);
   margin-top: 4rem;
-  /* border-radius: 2rem 2rem 0 0; */
+  border-radius: 2rem 2rem 0 0;
   overflow: hidden;
   padding: 5rem 1.5rem 1.5rem 1.5rem;
   /* Needed for my own image? */
@@ -73,6 +69,47 @@ header {
   transform: rotate(90deg);
   font-weight: 300;
   font-size: 0.9rem;
+}
+
+/* Tooltips SOCIAL =============================  */
+
+.tooltip-social {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip-social .tooltiptext-social {
+  opacity: 0;
+  width: 6rem;
+  background-color: var(--colour-white);
+  color: #000;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  top: -5px;
+  left: 110%;
+  margin-left: 10px;
+  font-size: 0.8rem;
+  transition: opacity 0.6s ease-in-out;
+}
+
+/* Add the little arrow */
+.tooltip-social .tooltiptext-social::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 100%;
+  margin-top: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: var(--colour-white) transparent transparent transparent;
+  transform: rotate(90deg);
+}
+
+.tooltip-social:hover .tooltiptext-social {
+  opacity: 1;
 }
 
 /* =============== Media queries ===============  */
